<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/movie_card_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:cardCornerRadius="40dp"
        app:cardElevation="0dp"
        app:contentPaddingBottom="64dp">

        <androidx.constraintlayout.motion.widget.MotionLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layoutDescription="@xml/movies_carousel_item_xml_constraintlayout_scene">

            <ImageView
                android:id="@+id/movie_poster"
                android:layout_width="200dp"
                android:layout_height="300dp"
                android:layout_marginStart="20dp"
                android:layout_marginTop="48dp"
                android:layout_marginEnd="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0"
                tools:src="@drawable/joker_poster" />

            <TextView
                android:id="@+id/movie_title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Headline"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/movie_poster"
                tools:text="Joker" />

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/genres_chips"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="@id/movie_poster"
                app:layout_constraintHorizontal_bias="0.262"
                app:layout_constraintStart_toStartOf="@id/movie_poster"
                app:layout_constraintTop_toBottomOf="@id/movie_title">

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checkable="false"
                    android:clickable="false"
                    android:textColor="@android:color/darker_gray"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/darker_gray"
                    app:chipStrokeWidth="1dp"
                    tools:text="Action" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checkable="false"
                    android:clickable="false"
                    android:textColor="@android:color/darker_gray"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/darker_gray"
                    app:chipStrokeWidth="1dp"
                    tools:text="Drama" />

                <com.google.android.material.chip.Chip
                    style="@style/Widget.MaterialComponents.Chip.Choice"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:checkable="false"
                    android:clickable="false"
                    android:textColor="@android:color/darker_gray"
                    app:chipBackgroundColor="@android:color/white"
                    app:chipStrokeColor="@android:color/darker_gray"
                    app:chipStrokeWidth="1dp"
                    tools:text="History" />
            </com.google.android.material.chip.ChipGroup>

            <TextView
                android:id="@+id/movie_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                android:textColor="@color/dark_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/movie_poster"
                app:layout_constraintHorizontal_bias="0.25"
                app:layout_constraintStart_toStartOf="@id/movie_poster"
                app:layout_constraintTop_toBottomOf="@id/genres_chips"
                app:layout_constraintVertical_bias="0"
                tools:text="9.0" />

            <ImageView
                android:id="@+id/star_one_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_star_rate"
                app:layout_constraintBottom_toBottomOf="@id/movie_rating"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toEndOf="@+id/movie_rating"
                app:layout_constraintTop_toTopOf="@id/genres_chips"
                app:layout_constraintVertical_bias="1" />

            <ImageView
                android:id="@+id/star_two_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_star_rate"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/guideline"
                app:layout_constraintTop_toBottomOf="@id/guideline4"
                app:layout_constraintVertical_bias="1" />

            <ImageView
                android:id="@+id/star_three_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_star_rate"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/guideline1"
                app:layout_constraintTop_toBottomOf="@id/guideline4"
                app:layout_constraintVertical_bias="1" />

            <ImageView
                android:id="@+id/star_four_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_star_rate"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/guideline2"
                app:layout_constraintTop_toBottomOf="@id/guideline4"
                app:layout_constraintVertical_bias="1" />

            <ImageView
                android:id="@+id/star_five_rating"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@android:color/transparent"
                android:src="@drawable/ic_star_outline"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toEndOf="@+id/guideline3"
                app:layout_constraintTop_toBottomOf="@id/guideline4"
                app:layout_constraintVertical_bias="1" />

            <TextView
                android:id="@+id/movie_director"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:text="@string/director_format"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent" />

            <TextView
                android:id="@+id/actors_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/actors_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.1" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/actors_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:layoutAnimation="@anim/actors_list_animation_come_up"
                android:orientation="horizontal"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/actors_label" />

            <TextView
                android:id="@+id/introduction_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:text="@string/introduction_label"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="parent"
                app:layout_constraintVertical_bias="0.2" />

            <androidx.core.widget.NestedScrollView
                android:id="@+id/introduction_scroller"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/introduction_label">

                <TextView
                    android:id="@+id/introduction_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|center_vertical"
                    android:textAlignment="center" />
            </androidx.core.widget.NestedScrollView>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.5652" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6252" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.6852" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.917" />

        </androidx.constraintlayout.motion.widget.MotionLayout>
    </com.google.android.material.card.MaterialCardView>
</androidx.constraintlayout.widget.ConstraintLayout>

    <!--<me.zhanghai.android.materialratingbar.MaterialRatingBar-->
    <!--android:id="@+id/movie_rating_bar"-->
    <!--style="@style/Widget.MaterialRatingBar.RatingBar.Small"-->
    <!--android:layout_width="0dp"-->
    <!--android:layout_height="wrap_content"-->
    <!--android:layout_marginStart="8dp"-->
    <!--app:layout_constraintBottom_toBottomOf="@id/movie_rating"-->
    <!--app:layout_constraintStart_toEndOf="@id/movie_rating"-->
    <!--app:layout_constraintTop_toTopOf="@id/movie_rating"-->
    <!--app:layout_constraintVertical_bias="0.5"-->
    <!--app:mrb_progressTint="@android:color/holo_orange_dark" />-->